@@ -2,11 +2,14 @@
 <!DOCTYPE html>
 
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:m="http://www.w3.org/1998/Math/MathML" xmlns:epub="http://www.idpf.org/2007/ops">
-<a href="university-physics-volume-1.toc.html">Back to table of contents</a><head><title>3.2
- 
+<a href="university-physics-volume-1.toc.html">Back to table of contents</a><head>
+  
+<title>3.2
+
 Instantaneous Velocity and Speed
 </title>
 <link rel="stylesheet" type="text/css" href="the-style-epub.css"/>
+<script src="https://cdn.jsdelivr.net/pyodide/v0.27.2/full/pyodide.js"></script>
 </head>
 <body>
     <div data-type="page" id="page_123f28de-76db-4d9a-a2d1-919a1d7f25a2" class="chapter-content-module" data-book-content="true"><h2 data-type="document-title" data-sm="./modules/m58283/index.cnxml:3:1" id="page_123f28de-76db-4d9a-a2d1-919a1d7f25a2_titlecreatedbycookbook"><span class="os-number">3.2</span>
@@ -389,6 +392,7 @@ The position of a particle is given by <span class="os-math-in-para"><math xmlns
 <li data-sm="./modules/m58283/index.cnxml:156:1">Calculate the average velocity between 1.0 s and 3.0 s.</li>
 </ol>
 <p id="fs-id1168329150787" data-sm="./modules/m58283/index.cnxml:158:1"></p>
+
 <h4 data-type="title" data-sm="./modules/m58283/index.cnxml:158:31">Strategy</h4>
 <a href="#fs-id1168329153584" data-sm="./modules/m58283/index.cnxml:158:54" class="autogenerated-content">Equation 3.4</a> gives the instantaneous velocity of the particle as the derivative of the position function. Looking at the form of the position function given, we see that it is a polynomial in <em data-effect="italics" data-sm="./modules/m58283/index.cnxml:158:272">t</em>. Therefore, we can use <a href="#fs-id1168329070126" data-sm="./modules/m58283/index.cnxml:158:335" class="autogenerated-content">Equation 3.7</a>, the power rule from calculus, to find the solution. We use <a href="#fs-id1168329020268" data-sm="./modules/m58283/index.cnxml:158:434" class="autogenerated-content">Equation 3.6</a> to calculate the average velocity of the particle.
 <p id="fs-id1168329466256" data-sm="./modules/m58283/index.cnxml:159:1"></p>
@@ -448,6 +452,77 @@ In the limit that the time interval used to calculate <span class="os-math-in-pa
 </math></span> converges to the value of <em data-effect="italics" data-sm="./modules/m58283/index.cnxml:173:260">v.</em>
 </div>
 </div>
+
+<!-- A code example that I inserted:
+ Inserted Mar 6, 2025 by Addison Ballif -->
+
+ <div data-type="example" id="fs-id1168329069804" data-sm="./modules/m58283/index.cnxml:151:284"><h3 class="os-title">
+  <span class="os-title-label">Code Example </span>
+  <span class="os-number">3.C1</span>
+  <span class="os-divider"> </span>
+</h3>
+<div class="body">
+
+<p id="fs-id1168329439120" data-sm="./modules/m58283/index.cnxml:152:1"></p>
+<h4 data-type="title" data-sm="./modules/m58283/index.cnxml:152:31">Instantaneous Velocity and Average Velocity For Any Function</h4>
+<p>
+Sometimes the function that models the position of a particle is too difficult to compute by hand. 
+Consider the particle whose position is given by 
+<span class="os-math-in-para"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline"><mrow><mi>x</mi><mo stretchy="false">&#x00028;</mo><mi>t</mi><mo stretchy="false">&#x00029;</mo><mo>&#x0003D;</mo><mn>10</mn><mo>&#x02212;</mo><mfrac><mrow><mn>1</mn></mrow><mrow><mn>2</mn></mrow></mfrac><mo stretchy="false">&#x00028;</mo><mi>t</mi><mo>&#x02212;</mo><mn>2</mn><msup><mo stretchy="false">&#x00029;</mo><mn>2</mn></msup><mo>&#x02212;</mo><mfrac><mrow><mn>3</mn></mrow><mrow><mi>t</mi></mrow></mfrac><mi>sin</mi><mo stretchy="false">&#x00028;</mo><mn>4</mn><mi>t</mi><mo stretchy="false">&#x00029;</mo></mrow></math></math></span></semantics>.
+</p>
+<p>Below is a python code that creates a graph of the position vs time function for the first 8 seconds. 
+</p>
+
+<textarea id="code.3.C1.1" style="width: 100%;" rows = "16", autocorrect = "off", maxlength="500"></textarea>
+<button onclick="evaluatePython('.3.C1.1')">Run</button><button onclick="resetCode('.3.C1.1')">Reset Code</button>
+<textarea id="output.3.C1.1" style="width: 100%;" disabled></textarea>
+<div id="plot.3.C1.1"></div>
+
+<p>Even though this function might be difficult to differentiate by hand, we can make a computer do it. Remember the definition of the deriviative from equation </p>
+
+<div data-type="equation" id="fs-id1168329127174" class="unnumbered" data-sm="./modules/m58283/index.cnxml:22:1" data-label=""><math xmlns="http://www.w3.org/1998/Math/MathML" display="block"><semantics><mrow><mrow data-sm="./modules/m58283/index.cnxml:22:70"><mi data-sm="./modules/m58283/index.cnxml:22:78">v</mi><mo stretchy="false" data-sm="./modules/m58283/index.cnxml:22:92">(</mo><mi data-sm="./modules/m58283/index.cnxml:22:123">t</mi><mo stretchy="false" data-sm="./modules/m58283/index.cnxml:22:137">)</mo><mo data-sm="./modules/m58283/index.cnxml:22:168">=</mo><munder data-sm="./modules/m58283/index.cnxml:22:182"><mrow data-sm="./modules/m58283/index.cnxml:22:192"><mtext data-sm="./modules/m58283/index.cnxml:22:200">lim</mtext></mrow>
+  <mrow data-sm="./modules/m58283/index.cnxml:22:231"><mtext data-sm="./modules/m58283/index.cnxml:22:239">Δ</mtext><mi data-sm="./modules/m58283/index.cnxml:22:259">t</mi><mo stretchy="false" data-sm="./modules/m58283/index.cnxml:22:273">→</mo><mn data-sm="./modules/m58283/index.cnxml:22:304">0</mn></mrow>
+  </munder>
+  <mfrac data-sm="./modules/m58283/index.cnxml:22:338"><mrow data-sm="./modules/m58283/index.cnxml:22:347"><mi data-sm="./modules/m58283/index.cnxml:22:355">x</mi><mo stretchy="false" data-sm="./modules/m58283/index.cnxml:22:369">(</mo><mi data-sm="./modules/m58283/index.cnxml:22:400">t</mi><mo data-sm="./modules/m58283/index.cnxml:22:414">+</mo><mtext data-sm="./modules/m58283/index.cnxml:22:428">Δ</mtext><mi data-sm="./modules/m58283/index.cnxml:22:448">t</mi><mo stretchy="false" data-sm="./modules/m58283/index.cnxml:22:462">)</mo><mo data-sm="./modules/m58283/index.cnxml:22:493">−</mo><mi data-sm="./modules/m58283/index.cnxml:22:507">x</mi><mo stretchy="false" data-sm="./modules/m58283/index.cnxml:22:521">(</mo><mi data-sm="./modules/m58283/index.cnxml:22:552">t</mi><mo stretchy="false" data-sm="./modules/m58283/index.cnxml:22:566">)</mo></mrow>
+  <mrow data-sm="./modules/m58283/index.cnxml:22:606"><mtext data-sm="./modules/m58283/index.cnxml:22:614">Δ</mtext><mi data-sm="./modules/m58283/index.cnxml:22:634">t</mi></mrow>
+  </mfrac>
+  <mo data-sm="./modules/m58283/index.cnxml:22:667">=</mo><mfrac data-sm="./modules/m58283/index.cnxml:22:681"><mrow data-sm="./modules/m58283/index.cnxml:22:690"><mi data-sm="./modules/m58283/index.cnxml:22:698">d</mi><mi data-sm="./modules/m58283/index.cnxml:22:712">x</mi><mo stretchy="false" data-sm="./modules/m58283/index.cnxml:22:726">(</mo><mi data-sm="./modules/m58283/index.cnxml:22:757">t</mi><mo stretchy="false" data-sm="./modules/m58283/index.cnxml:22:771">)</mo></mrow>
+  <mrow data-sm="./modules/m58283/index.cnxml:22:811"><mi data-sm="./modules/m58283/index.cnxml:22:819">d</mi><mi data-sm="./modules/m58283/index.cnxml:22:833">t</mi></mrow>
+  </mfrac>
+  <mo data-sm="./modules/m58283/index.cnxml:22:866">.</mo></mrow>
+  </mrow>
+  </semantics>
+  </math>
+  </div>
+
+<p>On a computer, we can't take the limit as <span class="os-math-in-para"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline"><mrow><mi>&#x00394;</mi><mi>t</mi></mrow></math></math></span> goes to zero, 
+but we can choose <span class="os-math-in-para"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline"><mrow><mi>&#x00394;</mi><mi>t</mi></mrow></math></math></span> to be very small. Below is a python code that calculates the instantaneous velocity at a specific time.</p>
+
+<textarea id="code.3.C1.2" style="width: 100%;" rows = 14", autocorrect = "off", maxlength="500"></textarea>
+<button onclick="evaluatePython('.3.C1.2')">Run</button><button onclick="resetCode('.3.C1.2')">Reset Code</button>
+<textarea id="output.3.C1.2" style="width: 100%;" disabled></textarea>
+<div id="plot.3.C1.2"></div>
+
+<p>Why don't we use this code to make a plot of the instantaneous velocity versus time. Below is a code that uses the new function to create a plot of the instantaneous velocity. Try experimenting with the value of deltat and see how it changes the quality accuracy of the instantaneous velocity. Remember that the instantaneous velocity is the slope of the position vs time graph. </p>
+
+<textarea id="code.3.C1.3" style="width: 100%;" rows = 14", autocorrect = "off", maxlength="500"></textarea>
+<button onclick="evaluatePython('.3.C1.3')">Run</button><button onclick="resetCode('.3.C1.3')">Reset Code</button>
+<textarea id="output.3.C1.3" style="width: 100%;" disabled></textarea>
+<div id="plot.3.C1.3"></div>
+
+
+<p>In conclusion, when we have a function for position that is too difficult to differentiate by hand, a computer can allow us to still make useful predictions and analysis. </p>
+
+
+<!-- This thing is a cap before the red line.-->
+<p id="fs-id1168329150787" data-sm="./modules/m58283/index.cnxml:158:1"></p>
+
+
+</div>
+ </div>
+
+ <!-- Back to original text -->
+
 <div data-type="example" id="fs-id1168329085430" data-sm="./modules/m58283/index.cnxml:175:1"><h3 class="os-title">
   <span class="os-title-label">Example </span>
   <span class="os-number">3.4</span>
@@ -544,6 +619,144 @@ The velocity of the particle gives us direction information, indicating the part
   </div>
 
 <a href="university-physics-volume-1.toc.html">Back to table of contents</a>
+
+
+<!-- The code that runs all the python code cells -->
+  <script>
+    // Define all the id suffixes on this page
+    const page_cell_ids = ['.3.C1.1', '.3.C1.2', '.3.C1.3']
+
+    // This big array gives all the strings of default codes, in order given above for ids
+    const page_code_defaults = [`# import necessary functions
+from numpy import sin, linspace
+from matplotlib import pyplot as plt
+
+# define the position vs time function
+def x(t):
+    return 10 - 0.5*(t - 2)**2 - 3/t * sin(4*t)
+
+# plot the function for the first 8 seconds
+tpoints = linspace(0, 8, 100) # create 100 points
+plt.clf()
+plt.plot(tpoints, x(tpoints))
+plt.xlabel('time')
+plt.ylabel('position')
+plt.title('Position vs Time Graph')
+plt.show()`,`# import necessary functions
+from numpy import sin
+
+# define the position vs time function
+def x(t):
+    return 10 - 0.5*(t - 2)**2 - 3/t * sin(4*t)
+      
+# define the function for the derivative
+def v_instantaneous(t):
+    deltat = 0.0001
+    return (x(t + deltat) - x(t))/(deltat)
+    
+# Use the function to calculate the intantaneous velocity
+print(f'The instantaneous velocity at 2 seconds is {v_instantaneous(2):.3g} m/s.')`,
+`
+# define the function for the derivative
+def v_instantaneous(t):
+    deltat = 0.0001
+    return (x(t + deltat) - x(t))/(deltat)
+
+# Plot the velocity vs time graph
+plt.clf()
+plt.plot(tpoints, v_instantaneous(tpoints))
+plt.xlabel('time')
+plt.ylabel('velocity')
+plt.title('Instantaneous Velocity Graph')
+plt.show()
+`
+]
+
+    // init Pyodide
+    async function main() {
+      // start pyodide
+      let pyodide = await loadPyodide();
+
+      // micropip allows installing packages
+      await pyodide.loadPackage("micropip");
+      const micropip = pyodide.pyimport("micropip");
+
+      //install the packages we might use on this page
+      await micropip.install('numpy');
+      await micropip.install('matplotlib')
+      
+      // overwrite the print function so that it looks like it works. 
+      pyodide.runPython(`
+def print(*args):
+    return args
+      `)
+
+      // return the pyodide object for use
+      return pyodide;
+    }
+    let pyodideReadyPromise = main();
+
+
+    // This function resets the code cell to default value
+    function resetCode(cellSuffix) {
+      const idx = page_cell_ids.indexOf(cellSuffix)
+      const codecell = document.getElementById("code" + cellSuffix);
+      codecell.value = page_code_defaults[idx];
+    }
+
+    // initialize all the default code cell values
+    for (let i = 0; i < page_cell_ids.length; i++) {
+      resetCode(page_cell_ids[i]);
+    }
+    
+    // This function runs a given code cell
+    async function evaluatePython(cellSuffix) {
+      const output = document.getElementById("output" + cellSuffix);
+      const codecell = document.getElementById("code" + cellSuffix);
+      const plotparent = document.getElementById("plot" + cellSuffix);
+
+      let pyodide = await pyodideReadyPromise;
+      try {
+        
+        // Clear the old graphing stuff
+        while (plotparent.lastElementChild) {
+          plotparent.removeChild(plotparent.lastChild);
+        }
+  
+        // Run the python
+        output.value = pyodide.runPython(codecell.value);
+
+        // If it says undefined, then just make it blank because just saying undefined is weird. 
+        if (output.value == 'undefined') {
+          output.value = ""
+        }
+  
+        // MOVE THE PLOTS TO WHERE THEY SHOULD BE
+        const newMplObjects = document.querySelectorAll(`[id*="matplotlib_"]`)
+        // I'm going to rename the new stuff so that these won't show up in the 
+        // query in the future. This also means that this query includes only the stuff from this run. 
+        
+        newMplObjects.forEach(function(element) {
+          var highestObject = element;
+          while (highestObject.parentElement.id.startsWith("matplotlib_")) {
+            highestObject = highestObject.parentElement;
+          }
+          // now we know we have the parent
+          if (!plotparent.querySelector(highestObject.id)) {
+            // If the parent isn't already in the plotparent object
+            plotparent.appendChild(highestObject);
+          }
+  
+          // change the id of the object
+          element.id = "plotobject" + cellSuffix
+        });
+        
+      } catch (err) {
+        output.value = err;
+      }
+    }
+  </script>
+
 </body>
 </html>
 <!-- # sourceMappingURL=d50f6e32-0fda-46ef-a362-9bd36ca7c97d-at-aa8a43e-colon-123f28de-76db-4d9a-a2d1-919a1d7f25a2.html.map -->
